commit on 'main'

--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,9 @@
             <title>
             Form.html
            </title>
-           <p class="text-center text-light">WELCOME!<br></p>
+           <p class="text-center text-light" id="head">WELCOME!<br></p>
     </head>
+    
     <body class="bg-black">
         <div class="container bg-light" id="cont" >
             <form class="row" >
